# FI520QuantFin

./: .~lock.FI520 Project Workflow.pptx#  CMakeLists.txt  FI520 Project Workflow.pptx  devtoolinstall.md  license.md  readme.md  setup.py
Binaries/: BuildSystemTest.cpp
Main/: BuildSystemTest.cpp  assignment1.cpp  assignment2.cpp
QLib/: readme.md
QLib/inc/: qlib.hpp
QLib/inc/bonds/: bonds.hpp
QLib/inc/opt/: optimization.hpp
QLib/inc/valuation/: valuation.hpp
R Code/FI520/Ch 1 Introduction (1)/Ch 1 Introduction/1.2 Heating Degree Days/: 1.2-HDD-Test.docx  ATLHDD.csv
R Code/FI520/Ch 1 Introduction (2)/Ch 1 Introduction/1.1 Program Layout/: 1.1 Program Layout.R  1.1-Program-Layout.docx  1A.1 Introduction to R Appendix A.R
R Code/FI520/Ch 1 Introduction (2)/Ch 1 Introduction/1.2 Heating Degree Days/: 1.2 HDD Test.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.1 Calendar/: 3.1 Ancient Calendar Test.R  3.1 Calendar Test.R  3.1 Calendar and Compounding Test.R  3.1-Calendar-Test.docx  Adjust Date.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.2 CDF and Inverse CDF/: 3.2 CDF and Inverse CDF Test.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.3 Univariate Random Number Generator/: 3.3 Univariate RNG Large Sample Test.R  3.3 Univariate RNG Test.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.4 LSC Curve Fitting Model/: 3.4 LSC Coefficient Sensitivity Test.R  3.4 LSC Curve Fitting Test.R  3.4 LSC Regression Independent Variables Test.R  3.4 Regression Test.R  LSC Regression Independent Variables Graph.R  USTLiborIRSwapDataRYearly.xlsx
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.5 Sorting Data/: 3.6 Sorting Data Test.R  SO.prn
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.6 Embedded Functions/: 3.6 Embedded Functions Test.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/Ch 3 Quantitative Finance Tools/3.7 Numerical Integration/: 3.7 Numerical Double Integration Test.R  3.7 Numerical Integration Test.R  Density and Distribution Study.R  Lognormal Distribution Functions.R  Normal Distribution Functions.R
R Code/FI520/Ch 3 Quantitative Finance Tools (1)/__MACOSX/Ch 3 Quantitative Finance Tools/: ._3.5 Sorting Data
R Code/FI520/Ch 4 Valuation Bonds and Stocks (1)/Ch 4 Valuation Bonds and Stocks/4.1 Valuation US Treasuries/: CMT Functions.R  CMT Inputs.R  CMT20190911.xlsx  CMT20190917.xlsx  CMT20200124.xlsx  CMT20220127.xlsx  CMT20220127S.xlsx  UST Book Inputs.R  UST Book Spreads Over CMT Test.R  UST Functions.R  UST Inputs.R  UST20190911.xlsx  UST20190917.xlsx  UST20200124.xlsx  UST20220127.xlsx  Valuation UST Test.R
R Code/FI520/Ch 4 Valuation Bonds and Stocks (1)/Ch 4 Valuation Bonds and Stocks/4.2 Valuation Corporate Bonds/: Bond Inputs.R  (+5 more)
WorkSpace/: test.py
b/: Assignment1  Assignment2  BuildSysTest  CMakeCache.txt  Makefile  cmake_install.cmake
src/: bindings.cpp
tests/: unit_test1.cpp
(+225 files in other folders)
